manifests/dev/java-simple-app_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  java-simple-app-dev
  namespace: microservice
  labels:
    app.kubernetes.io/instance: java-simple-app-node
    app.kubernetes.io/name: java-simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: java-simple-app-node
      app.kubernetes.io/name: java-simple-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: java-simple-app-node
        app.kubernetes.io/name: java-simple-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - java-simple-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: java-simple-app-dev
          image: IMAGE_VERSION
          ports:
            - containerPort: 8080
